--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,9 +16,8 @@ jobs:
         with:
           github_user_name: Fiddy2112
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-
+                  dist/github-contribution-grid-snake.svg?palette=github-dark&color_snake=39FF14&color_dots=0f766e,065f46,0e7490,0891b2
+                  dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=39FF14&color_dots=0f766e,065f46,0e7490,0891b2
       - name: Push to GitHub
         uses: crazy-max/ghaction-github-pages@v3
         with:
